--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -155,13 +155,13 @@
     }
   },
   "hero": {
-    "welcomeToTeqwa": "مرحباً بكم في تقوى",
+    "welcomeToTeqwa": "مرحباً بكم في مسجد مجمع التقوى",
     "experienceBeauty": "اختبر جمال",
     "islamicCommunity": "المجتمع الإسلامي",
     "joinUsSubtitle": "انضم إلينا في صلواتنا اليومية وبرامجنا التعليمية وفعالياتنا المجتمعية لتقوية إيمانك واتصالك بالله.",
     "explorePrograms": "استكشف البرامج",
     "aboutUs": "من نحن",
-    "mujeaAtTekwa": "مجمع التقوى",
+    "mujeaAtTekwa": "مسجد مجمع التقوى",
     "buildingStrong": "بناء",
     "faithCommunity": "مجتمع إيماني قوي",
     "togetherWeGrow": "معاً ننمو في الإيمان والمعرفة وخدمة مجتمعنا وما بعده.",
@@ -197,7 +197,7 @@
     "builtWith": "بُني بـ",
     "forCommunity": "للمجتمع",
     "backToTop": "العودة إلى الأعلى",
-    "poweredBy": "مدعوم من قبل مطوري تقوى",
+    "poweredBy": "مدعوم من قبل مطوري مسجد مجمع التقوى",
     "donations": "التبرعات",
     "futsalBooking": "حجز ملعب كرة القدم",
     "educationalServices": "الخدمات التعليمية",
@@ -240,7 +240,7 @@
     "eventTime": "وقت الفعالية",
     "location": "الموقع",
     "communityEvents": "فعاليات المجتمع",
-    "joinUsDescription": "انضم إلينا في الفعاليات الروحية والتعليمية وبناء المجتمع في مجمع التقوى.",
+    "joinUsDescription": "انضم إلينا في الفعاليات الروحية والتعليمية وبناء المجتمع في مسجد مجمع التقوى.",
     "searchEvents": "البحث عن الفعاليات...",
     "allCategories": "جميع الفئات",
     "showPastEvents": "إظهار الفعاليات السابقة",
@@ -720,7 +720,7 @@
       "pleaseWait": "يرجى الانتظار بينما نتحقق من عنوان بريدك الإلكتروني..."
     },
     "roleSelection": {
-      "welcomeToTeqwa": "مرحباً بك في التقوى",
+      "welcomeToTeqwa": "مرحباً بك في مسجد مجمع التقوى",
       "selectRole": "اختر دورك للمتابعة",
       "chooseBestDescribes": "اختر الخيار الذي يصف بشكل أفضل علاقتك مع مجتمعنا",
       "admin": {
@@ -1002,7 +1002,7 @@
     "title": "العضوية",
     "becomeMember": "كن عضواً",
     "membershipBenefits": "فوائد العضوية",
-    "subtitle": "انضم إلى مجتمعنا وكن عضواً في مجمع التقوى.",
+    "subtitle": "انضم إلى مجتمعنا وكن عضواً في مسجد مجمع التقوى.",
     "loginToJoin": "تسجيل الدخول للانضمام",
     "chooseMembershipTier": "اختر مستوى العضوية الخاص بك",
     "membershipSubtitle": "ادعم مسجدنا واحصل على الوصول إلى فوائد المجتمع الحصرية. اختر الخطة التي تناسب التزامك بقضيتنا.",
