--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -91,23 +91,25 @@
   },
   "membership": {
     "title": "Membership",
-    "subtitle": "Become a member of our community and gain access to exclusive benefits.",
+    "subtitle": "Join our community and become a member of MUJEMA’ TEQWA MOSQUE.",
     "loginToJoin": "Login to Join",
     "comingSoonTitle": "Membership Program Launching Soon!",
     "comingSoonDescription": "We are working hard to bring you an amazing membership experience. Stay tuned for exclusive benefits and community perks!",
     "chooseMembershipTier": "Choose Your Membership Tier",
-    "membershipSubtitle": "Select the plan that best fits your needs and start enjoying the benefits today.",
-    "popular": "Most Popular",
-    "etbPerMonth": "ETB / Month",
+    "membershipSubtitle": "Support our mosque and gain access to exclusive community benefits. Select the plan that best fits your commitment to our cause.",
+    "popular": "POPULAR",
+    "etbPerMonth": "ETB / month",
     "currentPlan": "Current Plan",
     "joinNow": "Join Now",
     "completeSubscription": "Complete Subscription",
-    "failedToLoad": "Failed to load membership data",
-    "pleaseLogin": "Please login to subscribe",
+    "failedToLoad": "Failed to load membership options",
+    "pleaseLogin": "Please login to join our membership program",
     "subscriptionSubmitted": "Subscription submitted for review!",
     "subscriptionSuccess": "Subscription successful!",
     "paymentFailed": "Payment initialization failed",
-    "failedToProcess": "Failed to process subscription"
+    "failedToProcess": "Failed to process membership request",
+    "becomeMember": "Become a Member",
+    "membershipBenefits": "Membership Benefits"
   },
   "nav": {
     "home": "Home",
@@ -187,13 +189,13 @@
     }
   },
   "hero": {
-    "welcomeToTeqwa": "Welcome to Mujemea At-Teqwa",
+    "welcomeToTeqwa": "Welcome to MUJEMA’ TEQWA MOSQUE",
     "experienceBeauty": "Experience the Beauty of",
     "islamicCommunity": "Islamic Community",
     "joinUsSubtitle": "Join us in our daily prayers, educational programs, and community events to strengthen your faith and connection with Allah.",
     "explorePrograms": "Explore Programs",
     "aboutUs": "About Us",
-    "mujeaAtTekwa": "MuJemea At-Tekwa",
+    "mujeaAtTekwa": "MUJEMA’ TEQWA MOSQUE",
     "buildingStrong": "Building a Strong",
     "faithCommunity": "Faith Community",
     "togetherWeGrow": "Together we grow in faith, knowledge, and service to our community and beyond.",
@@ -229,7 +231,7 @@
     "openDaily": "Open Daily",
     "builtWith": "Built with",
     "forCommunity": "for our community",
-    "poweredBy": "Powered by Teqwa Builders at Brolf",
+    "poweredBy": "Powered by MUJEMA’ TEQWA Developers",
     "donations": "Donations",
     "futsalBooking": "Futsal Booking",
     "educationalServices": "Educational Services",
@@ -289,7 +291,7 @@
     "eventTime": "Event Time",
     "location": "Location",
     "communityEvents": "Community Events",
-    "joinUsDescription": "Join us for spiritual, educational, and community-building events at MuJemea At-Tekwa.",
+    "joinUsDescription": "Join us for spiritual, educational, and community-building events at MUJEMA’ TEQWA MOSQUE.",
     "searchEvents": "Search events...",
     "allCategories": "All Categories",
     "showPastEvents": "Show Past Events",
@@ -775,7 +777,7 @@
       "pleaseWait": "Please wait while we verify your email address..."
     },
     "roleSelection": {
-      "welcomeToTeqwa": "Welcome to Teqwa",
+      "welcomeToTeqwa": "Welcome to MUJEMA’ TEQWA MOSQUE",
       "selectRole": "Select your role to continue",
       "chooseBestDescribes": "Choose the option that best describes your relationship with our community",
       "admin": {
@@ -920,7 +922,7 @@
   },
   "about": {
     "title": "About MuJemea",
-    "titleHighlight": "At-Tekwa",
+    "titleHighlight": "TEQWA MOSQUE",
     "description": "A beacon of faith, knowledge, and community service in the heart of our city.",
     "yearsOfService": "Years of Service",
     "communityMembers": "Community Members",
@@ -928,7 +930,7 @@
     "ourPurpose": "Our Purpose",
     "purposeSubtitle": "Guided by faith and driven by service",
     "ourMission": "Our Mission",
-    "missionDesc": "At MuJemea At-Tekwa, we strive to be a welcoming space for worship, learning, and community building. Our mission is to nurture faith, knowledge, and service while preserving Islamic values and traditions.",
+    "missionDesc": "At MUJEMA’ TEQWA MOSQUE, we strive to be a welcoming space for worship, learning, and community building. Our mission is to nurture faith, knowledge, and service while preserving Islamic values and traditions.",
     "ourVision": "Our Vision",
     "visionDesc": "We envision a vibrant community where individuals and families grow spiritually, intellectually, and socially, contributing positively to society at large.",
     "worship": "Worship",
@@ -966,7 +968,7 @@
     "ourJourney": "Our Journey",
     "journeySubtitle": "From humble beginnings to a thriving community center",
     "foundation": "Foundation",
-    "foundationDesc": "MuJemea At-Tekwa was established by dedicated community members who saw the need for an Islamic center.",
+    "foundationDesc": "MUJEMA’ TEQWA MOSQUE was established by dedicated community members who saw the need for an Islamic center.",
     "firstExpansion": "First Expansion",
     "firstExpansionDesc": "Added dedicated prayer area for women and classrooms for the weekend Islamic school.",
     "tenthAnniversary": "10th Anniversary",
@@ -1029,15 +1031,15 @@
     "fridayHours": "Friday: Special hours for Jumu'ah prayer",
     "viewPrayerTimes": "View Prayer Times",
     "sendUsMessage": "Send Us a Message",
-    "contactDescription": "MuJemea At-Tekwa — Addis Ababa, Ethiopia. We're here to help the community. Please share your inquiry and we'll reply soon.",
+    "contactDescription": "MUJEMA’ TEQWA MOSQUE — Addis Ababa, Ethiopia. We're here to help the community. Please share your inquiry and we'll reply soon.",
     "fullName": "Full Name",
     "subject": "Subject",
     "message": "Message",
     "sending": "Sending...",
     "sendMessage": "Send Message",
     "clear": "Clear",
-    "visitMuJemea": "Visit MuJemea At-Tekwa",
-    "visitDescription": "MuJemea At-Tekwa, Addis Ababa, Ethiopia — find us at the center of the community.",
+    "visitMuJemea": "Visit MUJEMA’ TEQWA MOSQUE",
+    "visitDescription": "MUJEMA’ TEQWA MOSQUE, Addis Ababa, Ethiopia — find us at the center of the community.",
     "openInGoogleMaps": "Open in Google Maps",
     "callUs": "Call Us",
     "frequentlyAskedQuestions": "Frequently Asked Questions",
@@ -1061,26 +1063,6 @@
     "pleaseEnterName": "Please enter your full name.",
     "pleaseEnterEmail": "Please enter a valid email address.",
     "pleaseEnterMessage": "Please enter a message."
-  },
-  "membership": {
-    "title": "Membership",
-    "subtitle": "Join our community and become a member of MuJemea At-Tekwa.",
-    "loginToJoin": "Login to Join",
-    "chooseMembershipTier": "Choose Your Membership Tier",
-    "membershipSubtitle": "Support our mosque and gain access to exclusive community benefits. Select the plan that best fits your commitment to our cause.",
-    "popular": "POPULAR",
-    "etbPerMonth": "ETB / month",
-    "currentPlan": "Current Plan",
-    "joinNow": "Join Now",
-    "pleaseLogin": "Please login to join our membership program",
-    "failedToLoad": "Failed to load membership options",
-    "failedToProcess": "Failed to process membership request",
-    "becomeMember": "Become a Member",
-    "membershipBenefits": "Membership Benefits",
-    "completeSubscription": "Complete Subscription",
-    "subscriptionSubmitted": "Subscription submitted for review! You will be notified once confirmed.",
-    "paymentFailed": "Membership created but payment failed. Please check your dashboard.",
-    "subscriptionSuccess": "Membership subscription successful!"
   },
   "ders": {
     "title": "Ders & Lecture Archive",
