about status update

--- a/src/locales/am.json
+++ b/src/locales/am.json
@@ -904,35 +904,35 @@
     "meetOurTeam": "ቡድናችንን ይቀላቀሉ",
     "teamSubtitle": "ማህበረሰባችንን የሚያገለግሉ የተገለጹ ግለሰቦች",
     "teamMembers": {
-      "imamAbdullah": {
-        "name": "ኢማም አብዱላህ አል-ማንሱር",
-        "role": "ዋና ኢማም",
-        "description": "ለብዙ ዓመታት በቁርኝት ማህበረሰቡን ማገልገል።"
+      "shehKamil": {
+        "name": "ሼህ ካሚል ሸምሱ",
+        "role": "ኢማም",
+        "description": "ለማህበረሰቡ መንፈሳዊ መመሪያ እና አመራር መስጠት።"
       },
-      "drAisha": {
-        "name": "ዶክተር አይሻ ራህማን",
-        "role": "የትምህርት ዳይሬክተር",
-        "description": "የመማሪያ እና የወጣቶች ፕሮግራሞቻችንን ይመራል።"
+      "shehSeidAli": {
+        "name": "ሼህ ሰይድ አሊ",
+        "role": "ኢማም",
+        "description": "ለአባላት ትምህርት እና መንፈሳዊ እድገት የተሰጡ።"
       },
-      "yusufKhan": {
-        "name": "ዩሱፍ ኻን",
-        "role": "የማህበረሰብ ማድረሻ",
-        "description": "የማህበረሰብ አባላትን እና ተነሳሽነቶችን ያገናኛል።"
+      "shehSeidSherif": {
+        "name": "ሼህ ሰይድ ሸሪፍ",
+        "role": "ኢማም",
+        "description": "በዕለታዊ ጸሎቶች እና ምክሮች ማህበረሰቡን ማገልገል።"
       },
-      "fatimaAhmed": {
-        "name": "ፋቲማ አህመድ",
-        "role": "የወጣቶች ኮኦርዲኔተር",
-        "description": "ለወጣቶቻችን ጠንካራ ፕሮግራሞችን ይገነባል።"
+      "ustazAli": {
+        "name": "ኡስታዝ አሊ ጣሃ",
+        "role": "የመድረሳ አስተባባሪ",
+        "description": "ለሁሉም እድሜዎች የትምህርት ፕሮግራሞችን ማስተዳደር እና ማስተባበር።"
       }
     },
     "ourJourney": "ጉዞያችን",
     "journeySubtitle": "ከተጠላለፉ መጀመሪያዎች እስከ ተጎሳቆለ የማህበረሰብ ማዕከል",
     "foundation": "መሰረት",
-    "foundationDesc": "ሙጀአ አት-ተቃዋ የእስላም ማዕከል አስፈላጊነትን ያዩ ተገለጹ የማህበረሰብ አባላት ተመስርቷል።",
-    "firstExpansion": "የመጀመሪያ ማስፋፊያ",
-    "firstExpansionDesc": "ለሴቶች የተለየ የስግደት ቦታ እና ለየሳምንት የእስላም ትምህርት ቤት ክፍሎች ታክሏል።",
-    "tenthAnniversary": "10ኛ ዓመት በዓል",
-    "tenthAnniversaryDesc": "አዲስ የማህበረሰብ ማዕከል ተጠናቋል እና ብዙ የትምህርት ፕሮግራሞች ተጀምረዋል።",
+    "foundationDesc": "ሙጀአ አት-ተቃዋ በ2015 (2023) በኮልፌ ቀራኒዮ በተነሳሱ የማህበረሰብ አባላት ተመስርቷል።",
+    "firstExpansion": "የማህበረሰብ እድገት",
+    "firstExpansionDesc": "የትምህርት ፕሮግራሞችን በማስፋፋት እና እያደገ ያለውን ፍላጎት ለማገልገል የሳምንት የደርስ ስርዓትን ጀምሯል።",
+    "tenthAnniversary": "ቀጣይ ልማት",
+    "tenthAnniversaryDesc": "መገልገያዎቻችንን በማሻሻል እና ልዩ የወጣቶች እና የማህበረሰብ አገልግሎት ፕሮግራሞችን በማስተዋወቅ ላይ ነን።",
     "digitalEra": "ዲጂታል ዘመን",
     "digitalEraDesc": "የመስመር ላይ አገልግሎቶች እና የዲጂታል የስግደት ሰዓት ስርዓቶች ለማህበረሰቡ ተጀምረዋል።",
     "joinOurCommunity": "ማህበረሰባችንን ይቀላቀሉ",
