--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -887,36 +887,36 @@
     "meetOurTeam": "تعرف على فريقنا",
     "teamSubtitle": "الأفراد المتفانون الذين يخدمون مجتمعنا",
     "teamMembers": {
-      "imamAbdullah": {
-        "name": "الإمام عبد الله المنصور",
-        "role": "الإمام الرئيسي",
-        "description": "خدمة المجتمع بإخلاص لسنوات عديدة."
+      "shehKamil": {
+        "name": "الشيخ كامل شمسو",
+        "role": "إمام",
+        "description": "توفير الإرشاد الروحي والقيادة للمجتمع."
       },
-      "drAisha": {
-        "name": "الدكتورة عائشة رحمان",
-        "role": "مديرة التعليم",
-        "description": "تقود برامج التعلم والشباب لدينا."
+      "shehSeidAli": {
+        "name": "الشيخ سيد علي",
+        "role": "إمام",
+        "description": "مخصص للتعليم والنمو الروحي لأعضائنا."
       },
-      "yusufKhan": {
-        "name": "يوسف خان",
-        "role": "التواصل المجتمعي",
-        "description": "يربط أعضاء المجتمع والمبادرات."
+      "shehSeidSherif": {
+        "name": "الشيخ سيد شريف",
+        "role": "إمام",
+        "description": "خدمة المجتمع من خلال الصلوات والارشاد اليومي."
       },
-      "fatimaAhmed": {
-        "name": "فاطمة أحمد",
-        "role": "منسقة الشباب",
-        "description": "تبني برامج قوية لشبابنا."
+      "ustazAli": {
+        "name": "أستاذ علي طه",
+        "role": "منسق المدرسة",
+        "description": "إدارة وتنسيق البرامج التعليمية لجميع الأعمار."
       }
     },
     "ourJourney": "رحلتنا",
     "journeySubtitle": "من البدايات المتواضعة إلى مركز مجتمعي مزدهر",
     "foundation": "التأسيس",
-    "foundationDesc": "تم إنشاء مجمع التقوى من قبل أعضاء المجتمع المتفانين الذين رأوا الحاجة لمركز إسلامي.",
-    "firstExpansion": "التوسع الأول",
-    "firstExpansionDesc": "تمت إضافة منطقة صلاة مخصصة للنساء وفصول دراسية لمدرسة نهاية الأسبوع الإسلامية.",
-    "tenthAnniversary": "الذكرى العاشرة",
-    "tenthAnniversaryDesc": "اكتمل مركز المجتمع الجديد وتم إطلاق عدة برامج تعليمية.",
-    "digitalEra": "العصر الرقمي",
+    "foundationDesc": "تم إنشاء مجمع التقوى في عام 2023 من قبل أعضاء المجتمع المتفانين في كولفي كيرانيو.",
+    "firstExpansion": "نمو المجتمع",
+    "firstExpansionDesc": "توسيع البرامج التعليمية وإطلاق نظام الدروس الأسبوعي لخدمة الاحتياجات المتزايدة.",
+    "tenthAnniversary": "التطوير المستمر",
+    "tenthAnniversaryDesc": "تحسين مرافقنا وإطلاق برامج مخصصة للشباب والتواصل المجتمعي.",
+    "digitalEra": "التحول الرقمي",
     "digitalEraDesc": "تم إطلاق الخدمات عبر الإنترنت وأنظمة أوقات الصلاة الرقمية للمجتمع.",
     "joinOurCommunity": "انضم إلى مجتمعنا",
     "joinDescription": "كن جزءاً من مجتمع متنامٍ مكرس للإيمان والتعلم والخدمة.",
