--- a/src/locales/am.json
+++ b/src/locales/am.json
@@ -511,6 +511,8 @@
     "showHistory": "ታሪክ አሳይ",
     "confirmBooking": "ቦታ ማስያዣዎን ያረጋግጡ",
     "bookingSummary": "የቦታ ማስያዣ ማጠቃለያ",
+    "bookingAmount": "የቦታ ማስያዣ ክፍያ",
+    "payAndBook": "ክፈል እና ቦታ ያዝ",
     "contactName": "የእውቂያ ስም",
     "contactEmail": "የእውቂያ ኢሜይል",
     "numberOfPlayers": "የተጫዋቾች ብዛት",
