--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -545,6 +545,8 @@
     "phonePlaceholder": "+251 9XX XXX XXXX",
     "confirmBooking": "Confirm Your Booking",
     "bookingSummary": "Booking Summary",
+    "bookingAmount": "Booking Amount",
+    "payAndBook": "Pay & Book",
     "whyPlayHere": {
       "title": "Why Play Here?",
       "description": "Experience the best futsal environment with premium facilities and a welcoming community.",
